CIMA_POC/Componentes_core/kubernetes/traefik/traefik-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: cima-networking
  labels:
    app: traefik-ingress-controller
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traefik-ingress-controller
  template:
    metadata:
      labels:
        app: traefik-ingress-controller
        name: traefik-ingress-controller
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
      - name: traefik-tls-cert
        secret:
          secretName: traefik-tls-cert
      - name: traefik-dynamic-configmap
        configMap:
          name: traefik-dynamic-configmap
      containers:
      - image: traefik
        name: traefik-ingress-controller
        volumeMounts:
        - mountPath: /ssl
          name: traefik-tls-cert
        - mountPath: /traefik
          name: traefik-dynamic-configmap
        args:
        - --entrypoints.http.address=:80
        - --entrypoints.https.Address=:443
        - --providers.kubernetesingress
        - --log.level=INFO
        - --api.dashboard
        - --metrics.prometheus=true
        - --metrics.prometheus.buckets=0.100000, 0.300000, 1.200000, 5.000000
        - --metrics.prometheus.entryPoint=traefik
        - --providers.file.filename=/traefik/traefik.toml
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: admin
          containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-controller
  namespace: cima-networking
spec:
  selector:
    app: traefik-ingress-controller
  ports:
    - protocol: TCP
      port: 80  
      name: http
      nodePort: 30080
    - protocol: TCP
      port: 443
      name: https
      nodePort: 30443
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-controller-dashboard-service
  namespace: cima-networking
spec:
  selector:
    app: traefik-ingress-controller
  ports:
  - port: 8080
    name: admin
